--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header active">
-                <a class="navbar-brand" href="#">Wild Animal Trap</a>
+                <a class="navbar-brand" href="/#!/traps">Wild Animal Trap</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
