gprs and web updates

--- a/Server/static/partials/traps.html
+++ b/Server/static/partials/traps.html
@@ -4,7 +4,7 @@
         <img class="card-img-top" src="/static/fox.png" alt="FOX Image" width="150">
         <div class="card-block">
           <h4 class="card-title">Fox Trap</h4>
-          <p class="card-text">Trap Text</p>
+          <p class="card-text">Trap Active</p>
           <a href="/#!/trap-detail" class="btn btn-primary">Show Trap</a>
         </div>
       </div>
