--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -2,9 +2,30 @@
     <div class="row">
         <div class="col-md-4">
             <p>Status:{{ status }}</p>
+            <p>Location:{{ location }}
+                <a href="#" class="btn btn-info btn-sm">
+                    <span class="glyphicon glyphicon glyphicon-screenshot"></span> Go on Maps
+                </a>
+            </p>
+            <hr>
+            
         </div>
         <div class="col-md-4">
-            <p>Location:{{ location }}</p>
+            <p> Controls</p>
+            <a href="#" class="btn btn-info btn-lg">
+                <span class="glyphicon glyphicon-camera"></span> Take Photo
+            </a>
+            <br>
+            <br>
+            <a href="#" class="btn btn-info btn-lg">
+                <span class="glyphicon glyphicon-lock"></span> Open Door
+            </a>
         </div>
+        <div class="col-md-4">
+            <p> Photos</p>
+            <img src="/static/ex1.jpg" class="img-circle" alt="First" width="304" height="236"> 
+            <img src="/static/ex2.jpg" class="img-circle" alt="First" width="304" height="236"> 
+        </div>
+        
     </div>    
 </div>
