--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -1,7 +1,9 @@
 <div class="jumbotron text-center">
     <div class="row">
         <div class="col-md-4">
+            <p>Serial:{{ serial }}</p>
             <p>Status:{{ status }}</p>
+            <p>Name:{{ name }}</p>
             <p>Location:{{ location }}
                 <a href="#" class="btn btn-info btn-sm">
                     <span class="glyphicon glyphicon glyphicon-screenshot"></span> Go on Maps
