--- a/Server/static/partials/traps.html
+++ b/Server/static/partials/traps.html
@@ -1,11 +1,27 @@
 <!-- home.html -->
 <div class="jumbotron text-center">
-    <div class="card" style="width: 20rem;">
-        <img class="card-img-top" src="/static/fox.png" alt="FOX Image" width="150">
-        <div class="card-block">
-          <h4 class="card-title">Fox Trap</h4>
-          <p class="card-text">Trap Active</p>
-          <a href="/#!/trap-detail" class="btn btn-primary">Show Trap</a>
-        </div>
-      </div>
+    <div class="table-responsive">
+      <table data-toggle="table" class="table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Serial Number</th>
+            <th>Name</th>
+            <th>Location</th>
+          </tr>
+        </thead>
+        <tbody id="TrapTableBody">
+          <tr ng-repeat="trap in traps">
+            <td>{{$index+1}}</td>
+            <td ng-model="serialNumber">{{trap.serial}}</td>
+            <td>{{trap.name}}</td>
+            <td>{{trap.location}}</td>
+            <td>
+              <button class="btn btn-primary" ng-click="showTrapDetail(trap.serial)">Show
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 </div>
