UserInterface functions combined with HW.

--- a/Server/templates/login.html
+++ b/Server/templates/login.html
@@ -76,7 +76,8 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 
-	<!-- Login-Logout page js -->
+	<!-- Login-Logout page js and general functions -->
+	<script src="/static/script.js"></script>
 	<script src="/static/login.js"></script>
 </body>
 </html>
