--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -4,23 +4,22 @@
             <p>Serial:{{ serial }}</p>
             <p>Status:{{ status }}</p>
             <p>Name:{{ name }}</p>
-            <p>Location:{{ location }}
-                <a href="#" class="btn btn-info btn-sm">
-                    <span class="glyphicon glyphicon glyphicon-screenshot"></span> Go on Maps
-                </a>
-            </p>
+            <p>Location:{{ location }}</p>
             <hr>
             
         </div>
         <div class="col-md-4">
             <p> Controls</p>
-            <a href="#" class="btn btn-info btn-lg">
+            <a class="btn btn-info btn-lg" ng-click="takePhoto()">
                 <span class="glyphicon glyphicon-camera"></span> Take Photo
             </a>
             <br>
             <br>
-            <a href="#" class="btn btn-info btn-lg">
+            <a class="btn btn-info btn-lg" ng-click="setDoor(0)">
                 <span class="glyphicon glyphicon-lock"></span> Open Door
+            </a>
+            <a class="btn btn-info btn-lg" ng-click="setDoor(1)">
+                <span class="glyphicon glyphicon-lock"></span> Close Door
             </a>
         </div>
         <div class="col-md-4">
@@ -28,6 +27,5 @@
             <img src="/static/ex1.jpg" class="img-circle" alt="First" width="304" height="236"> 
             <img src="/static/ex2.jpg" class="img-circle" alt="First" width="304" height="236"> 
         </div>
-        
-    </div>    
+    </div>
 </div>
