--- a/Server/templates/login.html
+++ b/Server/templates/login.html
@@ -76,6 +76,11 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 
+	<!-- Angular JavaScript library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+	
 	<!-- Login-Logout page js and general functions -->
 	<script src="/static/script.js"></script>
 	<script src="/static/login.js"></script>
