--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -15,6 +15,14 @@
         </div>
     </div>
     <br><br>
+    <div class="row">
+        <div class="col-md-12">
+            <a href="" class="btn btn-info btn-lg" >
+                <span class="glyphicon glyphicon-pencil"></span> Edit
+            </a>
+        </div>
+    </div>
+    <br><br>
     <h3><span class="font-weight-bold">Controls</span></h3>
     <div class="row">
         <div class="col-md-3">
