--- a/Server/static/partials/traps.html
+++ b/Server/static/partials/traps.html
@@ -24,4 +24,11 @@
         </tbody>
       </table>
     </div>
+    <div class="row">
+        <div class="col-md-3">
+          <a href="" class="btn btn-info btn-lg" >
+              <span class="glyphicon glyphicon-plus"></span> Add New Trap
+          </a>
+        </div>
+    </div>
 </div>
