--- a/Server/static/partials/traps.html
+++ b/Server/static/partials/traps.html
@@ -25,10 +25,34 @@
       </table>
     </div>
     <div class="row">
-        <div class="col-md-3">
-          <a href="" class="btn btn-info btn-lg" >
-              <span class="glyphicon glyphicon-plus"></span> Add New Trap
-          </a>
-        </div>
-    </div>
+      <div class="col-md-12">
+          <!-- Trigger the modal with a button -->
+          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newTrapModal">Add New Trap</button>
+      </div>
+      <!-- Modal -->
+      <div id="newTrapModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">New Trap Informations</h4>
+              </div>
+              <div class="modal-body">
+                  <label for="newTrapSerial">Trap Serial:</label>
+                  <input name="newTrapSerial" id="newTrapSerial" type="text" class="form-control" placeholder="serial">
+                  <label for="newTrapName">Trap Name:</label>
+                  <input name="newTrapName" id="newTrapName" type="text" class="form-control" placeholder="name">
+                  <label for="newTrapLocation">Trap Location:</label>
+                  <input name="newTrapLocation" id="newTrapLocation" type="text" class="form-control" placeholder="location">
+                  <p id="addNewTrapMessage"></p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-default" ng-click="addNewTrap()">Add</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
