--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -5,7 +5,7 @@
             <p>Serial:{{ serial }}</p>
         </div>
         <div class="col-md-3">
-            <p>Status:{{ status }}</p>
+            <p>Active/Passive:{{ ap }}</p>
         </div>
         <div class="col-md-3">
             <p>Name:{{ name }}</p>
