edit trap detail option was implemented and tested.

--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -34,7 +34,7 @@
                     <input name="trapName" id="newTrapName" type="text" class="form-control" placeholder="{{name}}">
                     <label for="trapLocation">Trap Location:</label>
                     <input name="trapLocation" id="newTrapLocation" type="text" class="form-control" placeholder="{{location}}">
-                    <p id="newTrapMessage"></p>
+                    <p id="editTrapMessage"></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" ng-click="setTrapDetail()">Save</button>
