--- a/Server/static/partials/traps.html
+++ b/Server/static/partials/traps.html
@@ -17,8 +17,9 @@
             <td>{{trap.name}}</td>
             <td>{{trap.location}}</td>
             <td>
-              <button class="btn btn-primary" ng-click="showTrapDetail(trap.serial)">Show
-              </button>
+                <a class="btn btn-info btn-lg" ng-click="showTrapDetail(trap.serial)">
+                    <span class="fa fa-database"></span> Detail
+                </a>
             </td>
           </tr>
         </tbody>
@@ -27,7 +28,9 @@
     <div class="row">
       <div class="col-md-12">
           <!-- Trigger the modal with a button -->
-          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newTrapModal">Add New Trap</button>
+          <a class="btn btn-info btn-lg" data-toggle="modal" data-target="#newTrapModal">
+              <span class="fa fa-plus-square"></span> Add New Trap
+          </a>
       </div>
       <!-- Modal -->
       <div id="newTrapModal" class="modal fade" role="dialog">
