showing image guess results and about page completed.

--- a/Server/static/partials/about.html
+++ b/Server/static/partials/about.html
@@ -1,6 +1,15 @@
 <!-- about.html -->
-<div class="jumbotron text-center">
-    <h1>About Page page</h1>
-
-    <p>{{ message }}</p>
+<div class="jumbotron">
+    <h2 class="text-center"> GTU CSE 495 - Final Project1</h2>
+    <p class="text-justify text-left"> One of the problems with animals is that they take a wrong approach in the process of their capture.
+        Primitive traps are still in use in most areas for capture. Classic traps are designed to capture the animal only beyond thinking about the safety and health of the animal.
+        While trying to catch it quickly, it is possible to put the animals into situations like injuries and killing.
+        Instead, it is aimed to catch animals safely with the "Harmful Wilderness Gate" which is a project that has more 
+        modern and more technological infrastructure, equipment and software combined.
+    </p>
+    <p class="text-justify text-left"> With the remote control structure,
+        it is planned that after the capture phase of the animal, the users will have a detailed knowledge about the trap 
+        and the animal in a safe structure. This information is to know the weight of the animal, its appearance and its 
+        position in case of multiple traps. 
+    </p>
 </div>
