--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -86,9 +86,31 @@
     <br><br>
     <h3><span class="font-weight-bold">Last Photo</span></h3> 
     <div class="row">
-        <figure class="figure">
-            <img ng-src="{{lastPhotoSrc}}" class="figure-img img-fluid rounded" height="250" width="250"/>
-            <figcaption class="figure-caption"><strong>{{lastPhotoDesc}}</strong></figcaption>
-        </figure>
+        <div class="col-md-6">
+            <figure class="figure">
+                <img ng-src="{{lastPhotoSrc}}" class="figure-img img-fluid rounded" height="250" width="250"/>
+                <figcaption class="figure-caption"><strong>{{lastPhotoDesc}}</strong></figcaption>
+            </figure>
+        </div>
+        <div class="col-md-6">
+            <div class="table-responsive">
+                <table data-toggle="table" class="table">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Class</th>
+                        <th>Probability</th>
+                    </tr>
+                    </thead>
+                    <tbody id="GuessTableBody">
+                    <tr ng-repeat="guess in guesses">
+                        <td>{{$index+1}}</td>
+                        <td>{{guess.class}}</td>
+                        <td>{{guess.prob}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
