--- a/Server/static/partials/trap-detail.html
+++ b/Server/static/partials/trap-detail.html
@@ -60,12 +60,12 @@
             </a>
         </div>
         <div class="col-md-3">
-                <a class="btn btn-info btn-lg" ng-click="setDoor(1)">
+                <a class="btn btn-info btn-lg" ng-click="setBait(0)">
                     <span class="glyphicon glyphicon-chevron-right"></span> Push Bait
                 </a>
         </div>
         <div class="col-md-3">
-                <a class="btn btn-info btn-lg" ng-click="setDoor(1)">
+                <a class="btn btn-info btn-lg" ng-click="setBait(1)">
                     <span class="glyphicon glyphicon-chevron-left"></span> Pull Bait
                 </a>
         </div>
